# libtest-next

./: .clippy.toml  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  release.toml
.github/: settings.yml
.github/workflows/: ci.yml
crates/lexarg/: CHANGELOG.md  Cargo.toml  README.md
crates/lexarg-error/: CHANGELOG.md  Cargo.toml  README.md
crates/lexarg-error/examples/: hello-error.rs
crates/lexarg-error/src/: lib.rs
crates/lexarg-parser/: Cargo.toml  README.md
crates/lexarg-parser/examples/: hello-parser.rs
crates/lexarg-parser/src/: ext.rs  lib.rs
crates/lexarg/examples/: hello.rs
crates/lexarg/src/: ext.rs  lib.rs
crates/libtest-lexarg/: CHANGELOG.md  Cargo.toml  README.md
crates/libtest-lexarg/examples/: libtest-cli.rs
crates/libtest-lexarg/src/: lib.rs
crates/libtest2/: CHANGELOG.md  Cargo.toml  README.md
crates/libtest2-harness/: CHANGELOG.md  Cargo.toml  README.md
crates/libtest2-harness/examples/: simple.rs
crates/libtest2-harness/src/: case.rs  cli.rs  harness.rs  lib.rs  outcomes.rs  shuffle.rs  state.rs
crates/libtest2-harness/src/notify/: json.rs  junit.rs  mod.rs  pretty.rs  summary.rs  terse.rs
crates/libtest2-mimic/: CHANGELOG.md  Cargo.toml  README.md
crates/libtest2-mimic/examples/: mimic-tidy.rs  simple.rs  tidy.rs
crates/libtest2-mimic/src/: lib.rs
crates/libtest2-mimic/tests/testsuite/: all_passing.rs  main.rs  main_thread.rs  mixed_bag.rs  panic.rs  util.rs
crates/libtest2/examples/: simple.rs  tidy.rs
crates/libtest2/src/: lib.rs
crates/libtest2/tests/testsuite/: all_passing.rs  main.rs  main_thread.rs  mixed_bag.rs  panic.rs  util.rs
