[package]
name = "libtest2-harness"
version = "0.1.0"
description = "An experimental replacement for the core of libtest"
categories = ["development-tools::testing"]
keywords = ["libtest"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/pytest-rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
junit = []
threads = []

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.0"
lexarg = { version = "0.1.0", path = "../lexarg" }
lexarg-error = { version = "0.1.0", path = "../lexarg-error" }
libtest-lexarg = { version = "0.1.0", path = "../libtest-lexarg" }
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }

[dev-dependencies]

[lints]
workspace = true
